[package]
name = "probe-engine"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
jni = { version = "0.21.1" }
rust2go = { version = "0.3.14", features = ["build"] }
rust2go-cli = { version = "0.3.8" }

[build-dependencies]
rust2go = { version = "0.3.14", features = ["build"] }
