[package]
name = "iokclient"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
boringtun = { version = "0.6.0", features = ["jni-bindings", "ffi-bindings"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
jni = { version = "0.19.0" }
parking_lot = "0.12"
